--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "",
   "main": "express_server.js",
   "dependencies": {
+    "bcrypt": "^1.0.2",
     "body-parser": "^1.17.2",
     "cookie-parser": "^1.4.3",
-    "express": "^4.15.3",
-    "ejs": "^2.5.6"
+    "cookie-session": "^2.0.0-beta.2",
+    "ejs": "^2.5.6",
+    "express": "^4.15.3"
   },
   "devDependencies": {},
   "scripts": {
